# silvercat

./: .gitignore  0_setup.ipynb  pyproject.toml  requirements.txt  ruff.toml
models/: credit_risk_model.joblib
notebooks/: 1_analytics.ipynb  2_analytics.ipynb  2_modelling.ipynb  3_deployment.ipynb  analytics.py  analytics.py.bak
src/silvercat/: __init__.py  inference.py  modelling.py  utils.py
