[project]
name = "silvercat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Dimitar Vasilev", email = "vasilev.dimitar@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.3.0",
    "joblib>=1.5.3",
    "jupyterlab>=4.6.0",
    "jupytext>=1.19.4",
    "kagglehub>=1.0.2",
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "xgboost>=3.2.0",
]

[project.scripts]
silvercat = "silvercat:main"

[build-system]
requires = ["uv_build>=0.11.24,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.20",
    "ty>=0.0.54",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
